--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"graphql": "^14.6.0",
 		"graphql-tag": "^2.10.1",
 		"i18next": "^19.3.3",
+		"lodash": "^4.17.21",
 		"next": "^9.1.4",
 		"query-string": "^6.8.3",
 		"react": "^16.12.0",
